--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,3 +1,3 @@
    bucket: extrara-images
-   access_key_id: AKIAIOFKNFGY4OYNBAGQ
-   secret_access_key: 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
+   access_key_id: AKIAJOTEXVV57JKGDPBA
+   secret_access_key: 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
